acc/frontend/yamls/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: v0-1-prod-registry-app
  namespace: prod-app-hilversum
  labels:
    app: registry-app
    release: "v0-1-prod"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry-app
        release: "v0-1-prod"
    spec:
      nodeSelector:
        environment: production
      containers:
        - name: v0-1-prod-registry-app
          image: daasdtr01.dtr:5000/mycity/registry-app-prod:0.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
