acc/frontend/yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: v1-1-acc-registry-app-ingress
  namespace: acc-app-hilversum
  labels:
    app: registry-app
    release: v1-1-acc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Xss-Protection: 1";
spec:
  rules:
  - host: hilversum.my-city.org
    http:
      paths:
      - path: /
        backend:
          serviceName: v1-1-acc-registry-app
          servicePort: 8001
